--- a/app/student/profile/ProfileStyle.module.css
+++ b/app/student/profile/ProfileStyle.module.css
@@ -206,6 +206,10 @@
     color: white;
 }
 
+.languageWrapper {
+    position: relative;
+}
+
 /* language menu moved to global */
 
 /* Stats Grid */
